# Rylai

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/add_content_sample/: Cargo.toml  pyproject.toml  rylai.toml
examples/add_content_sample/python/add_content_sample/: add_content_sample.pyi  extra_types.pyi
examples/add_content_sample/src/: lib.rs
examples/basic_function_sample/: Cargo.toml  pyproject.toml  rylai.toml
examples/basic_function_sample/python/basic_function_sample/: __init__.py  basic_function_sample.pyi
examples/basic_function_sample/src/: lib.rs
examples/cross_module_sample/: Cargo.toml  pyproject.toml  rylai.toml
examples/cross_module_sample/python/cross_module_sample/: __init__.py  aa.pyi  cross_module_sample.pyi
examples/cross_module_sample/src/: lib.rs
examples/macro_expand_sample/: Cargo.toml  pyproject.toml  rylai.toml
examples/macro_expand_sample/python/macro_expand_sample/: __init__.py  macro_expand_sample.pyi
examples/macro_expand_sample/src/: lib.rs
examples/override_sample/: Cargo.toml  pyproject.toml  rylai.toml
examples/override_sample/python/override_sample/: __init__.py  override_sample.pyi
examples/override_sample/src/: lib.rs
examples/pyo3_sample/: Cargo.toml  pyo3_sample.pyi  pyproject.toml  rylai.toml
examples/pyo3_sample/python/pyo3_sample/: __init__.py  _typing.py  aa.pyi  bb.pyi  pyo3_sample.pyi
examples/pyo3_sample/src/: lib.rs
src/: add_content.rs  config.rs  generator.rs  macro_expand.rs  main.rs  output_layout.rs  stub_constants.rs  type_map.rs
src/collector/: mod.rs  model.rs  parse.rs  rename_all.rs
