[workspace]
members = [".", "examples/pyo3_sample"]
resolver = "2"

[package]
name = "rylai"
version = "0.3.2"
edition = "2024"
authors = ["monchin <mench92@126.com>"]
description = "Generate Python .pyi stub files from pyo3-annotated Rust source code statically without compilation"
license = "MIT"
repository = "https://github.com/monchin/Rylai"
homepage = "https://github.com/monchin/Rylai"
keywords = ["pyo3", "stub", "pyi", "python", "type-hints"]
categories = ["development-tools", "development-tools::ffi"]

[[bin]]
name = "rylai"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
heck = "0.5"

[dev-dependencies]
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

