[project]
name = "cross_module_sample"
requires-python = ">=3.10"
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
description = ""
authors = [
    { name = "monchin", email = "mench92@126.com" }
]
dynamic = ["version"]


[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"


[tool.maturin]
python-source = "python"
